--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,54 @@
-gunicorn
-whitenoise
-mysqlclient  # ou pymysql si tu utilises PyMySQL
+alembic==1.15.1
+asgiref==3.8.1
+blinker==1.9.0
+certifi==2025.1.31
+click==8.1.8
+colorama==0.4.6
+distlib==0.3.9
+dj-database-url==2.1.0
+Django==5.0.11
+django-cors-headers==4.7.0
+django-debug-toolbar==5.0.1
+django-environ==0.12.0
+django-ratelimit==4.1.0
+django-redis==5.4.0
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.0
+dominate==2.9.1
+filelock==3.18.0
+Flask==3.1.0
+Flask-Bootstrap==3.3.7.1
+flask-cors==5.0.1
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.1.1
+gunicorn==22.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.9
+MarkupSafe==3.0.2
+mysqlclient==2.2.7
+numpy==2.2.4
+opencv-python==4.11.0.86
+packaging==24.2
+pillow==11.1.0
+pipenv==2024.4.1
+platformdirs==4.3.6
+psycopg2-binary==2.9.9
+PyJWT==2.9.0
+PyMySQL==1.1.1
+python-dotenv==1.0.1
+redis==5.2.1
+setuptools==77.0.3
+SQLAlchemy==2.0.39
+sqlparse==0.5.3
+typing_extensions==4.12.2
+tzdata==2025.1
+virtualenv==20.29.3
+visitor==0.1.3
+Werkzeug==3.1.3
+wheel==0.38.1
+whitenoise==6.6.0
+WTForms==3.2.1
