--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 EMAIL_HOST_USER=malickelhadji07@gmail.com
 EMAIL_HOST_PASSWORD=pgqv jlmd yqoo zqoz
 SECRET_KEY = 'django-insecure--%d@rw=0e@d+ij&vmft$=9y#x6lp^4hedoi9j0mm0#6u#0+!tg'
+
+DJANGO_SETTINGS_MODULE=config.settings
+
